// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts should render correctly with alerts 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="0"
    onMouseEnter={[Function]}
    title="alerts.infoMessage.title"
    variant="info"
  >
    <Trans
      i18nKey="alerts.infoMessage.message"
      values={Object {}}
    />
  </Alert>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="1"
    onMouseEnter={[Function]}
    title="alerts.successMessage.title"
    variant="success"
  >
    <Trans
      i18nKey="alerts.successMessage.message"
      values={Object {}}
    />
  </Alert>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="2"
    onMouseEnter={[Function]}
    title="alerts.dangerMessage.title"
    variant="danger"
  >
    <Trans
      i18nKey="alerts.dangerMessage.message"
      values={Object {}}
    />
  </Alert>
</div>
`;

exports[`Alerts should render correctly without alerts 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
/>
`;
